--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1699,7 +1699,15 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_remove_debt_16:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-16.0%§!\n"
  TUR_remove_debt_17:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-17.0%§!\n"
  TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-18.0%§!\n"
- TUR_remove_debt_25:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-24.0%§!\n"
+ TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-19.0%§!\n"
+ TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-20.0%§!\n"
+ TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-21.0%§!\n"
+ TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-22.0%§!\n"
+ TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-23.0%§!\n"
+ TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-24.0%§!\n"
+ TUR_remove_debt_25:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-25.0%§!\n"
+ TUR_remove_debt_26:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-26.0%§!\n"
+ TUR_remove_debt_27:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-27.0%§!\n"
  TUR_remove_debt_30:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-30.0%§!\n"
  TUR_remove_debt_60:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-60.0%§!\n"
  TUR_remove_debt_80:0 "Modify §YOttoman Public Debt Administration§! by\nConsumer Goods Factories factor: §Y-85.0%§!\n"
@@ -2024,8 +2032,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_establish_order_in_macedonia_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\nDivision Attrition: §G-30.0%§!\n"
  TUR_establish_order_in_macedonia_tt3:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\nDivision Attrition: §G-40.0%§!\n"
  TUR_establish_order_in_macedonia_tt4:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\nDivision Attrition: §G-50.0%§!\n"
- TUR_integrate_macedonia:0 "Integrate Macedonia"
+ TUR_integrate_macedonia:0 "Integrate [FROM.GetName]"
  TUR_integrate_macedonia_desc:0 "Macedonia's importance for the empire combined with the local Turkish population makes it a real possibility for these vilayets to become a core part of our empire. Through increased opinion with locals, we can successfully integrate the region."
+ TUR_integrate_macedonia_tt:0 "Division Attrition value for [TUR_get_state_minority] is §G0.0% or less§!"
  TUR_tax_collection_in_albania:0 "Tax Collection in [FROM.GetName]"
  TUR_tax_collection_in_albania_desc:0 "Muslim Albanians in [FROM.GetName] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
  TUR_tax_collection_in_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\nResistance Target: §R+20%§!\nRecruitable Population: §G+5.00%§!\n"
