--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4127,6 +4127,44 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.77.t:0 "[TUR.GetLeader] Assasinated"
  ottoman.77.d:0 "Almost six months after the coup, Grand Vizier [TUR.GetLeader] was killed by the admirers of Şevket Paşa. The assassination of the grand vizier has effectively caused a shift within the united opposition. Since liberals are the powerholders of this coalition, the new candidate will be appointed from their group. Yet these events will drive conservatives and even minorities into seeking power on their own."
  ottoman.77.a:0 "We must consolidate power before our regime falls."
+ ottoman.78.t:0 "Süleyman Askerî Takes His Own Life"
+ ottoman.78.d:0 "As our enemies advance on the Mesapotamian front, one of our influential military and political figures, Süleyman Askerî, couldnt bear the humiliation of loss after loss. Being sent to the Mesapotamian front as the general commander of Mesapotamia, he was also serving as the head of the paramilitary organization of İttihat ve Terakki. As he experienced several defeats on the front, as well as witnessing the diminished morale of his soldiers, he found no other option but to take his own life."
+ ottoman.78.a:0 "Rest easy, fallen soldier."
+ ottoman.79.t:0 "Purchase Pre-Dreadnoughts From [GER.GetName]"
+ ottoman.79.d:0 "In late 1909, the German military attache to us began a conversation with the our Navy about the possibility of selling German warships to us to counter Greek naval expansion. After lengthy negotiations, including our attempts to buy one or more of the new battlecruisers Von der Tann, Moltke, and Goeben, the Germans offered to sell the four ships of the Brandenburg class at a cost of 10 million marks.\n\nWe chose to buy Kurfürst Friedrich Wilhelm and Weissenburg, since they were the more advanced ships of the class."
+ ottoman.79.a:0 "Oh, about that."
+ ottoman.79.b:0 "We need more time to think."
+ ottoman.80.t:0 "[TUR.GetName] Want to Purchase Pre-Dreadnoughts"
+ ottoman.80.d:0 "In late 1909, we attache to us began a conversation with the Ottoman Navy about the possibility of selling our warships to Ottoman to counter Greek naval expansion. After lengthy negotiations, including Ottomans attempts to buy one or more of the new battlecruisers Von der Tann, Moltke, and Goeben, we offered to sell the four ships of the Brandenburg class at a cost of 10 million marks.\n\n[TUR.GetAdjective] chose to buy Kurfürst Friedrich Wilhelm and Weissenburg, since they were the more advanced ships of the class."
+ ottoman.80.a:0 "This is how we get a good ally."
+ ottoman.80.b:0 "No, we won't sell them."
+ tur_british_ships_1914:0 "We'll receive two §Ybattleships§!, namely §YReşadiye§! and §YSultan Osman-ı Evvel§!"
+ eng_british_ships_1914:0 "We'll receive two §Ybattleships§!, namely §YHMS Erin§! and §YHMS Agincourt§!"
+ germany_transfers_ships:0 "§Y[GER.GetName]§! will transfer two of its §Ybattleships§!, namely §YSMS Kurfürst Friedrich Wilhelm§! and §YSMS Weissenburg§!"
+ germany_transfers_ships2:0 "We'll transfer two of our §Ybattleships§!, namely §YSMS Kurfürst Friedrich Wilhelm§! and §YSMS Weissenburg§!"
+ ottoman.81.t:0 "[GER.GetAdjective] Ships Arrived"
+ ottoman.81.d:0 "Two German pre-dreadnought battleships, SMS Kurfürst Friedrich Wilhelm and SMS Weissenburg has arrived our ports. They will be renamed as Barbaros Hayreddin and Turgut Reis, and serve our navy."
+ ottoman.81.a:0 "Now tell me Greeks, how about these ships?"
+ ottoman.82.t:0 "Germans Don't Want to Sell Ships"
+ ottoman.82.d:0 "We paid fairly. But the Germans decided not to hand over two battleships to us!"
+ ottoman.82.a:0 "Give my money back!"
+ ottoman.83.t:0 "Reşadiye-class Battleships are Ready"
+ ottoman.83.d:0 "To combat Greek influence in the Aegean, our government has ordered two dreadnought battleships from Britain. Previously ordered by Brazil yet not continued, these battleships will help with solidfying our strength in Aegean waters."
+ ottoman.83.a:0 "Lets make the last purchase and get our ships."
+ ottoman.83.b:0 "I suppose we'll pass."
+ ottoman.84.t:0 "[TUR.GetAdjective] Battleship Order"
+ ottoman.84.d:0 "The two Reşadiye-class battleships ordered by [TUR.GetNameDef] are ready. As they just made the last bit of purchase, the ships are ready to be handed out."
+ ottoman.84.a:0 "Business is business."
+ ottoman.84.b:0 "They're alligned with Germans. They cannot be trusted."
+ ottoman.85.t:0 "The Ships Have Arrived!"
+ ottoman.85.d:0 "Two dreadnought battleships has arrived our ports that we have ordered before. They will be named as Reşadiye and Sultan Osman-ı Evvel, and serve our navy."
+ ottoman.85.a:0 "Great."
+ ottoman.86.t:0 "The British Seize our Battleships!"
+ ottoman.86.d:0 "We ordered two battleships to Britain, and the ships were about to be completed. But the British took away our battleships to use their own!"
+ ottoman.86.a:0 "What the hell is going on?!"
+ ottoman.87.t:0 "[TUR.GetAdjective] Battleship Deal Falls Through"
+ ottoman.87.d:0 "As the construction of the Reşadiye-class battleships are completed, [TUR.GetName] refused to make the last payment and has called the deal is off."
+ ottoman.87.a:0 "I suppose we can put them into good use."
 
  ottoman.72.t:0 "Russia Agrees"
  ottoman.72.d:0 "Seems like the Russians also agree with our statement, they agreed to hand us Kars, Artvin and Batumi."
@@ -4860,41 +4898,6 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_ottoman.77.d:0 "For far too long we tried to oppress minorities and those with different religion to comply with our mindset, but this has proven to be wrong. To have a united stance in the World stage, we must give minorities their desired rights."
  ww1_ottoman.77.a:0 "Make them feel free"
  ww1_ottoman.77.b:0 "Give token concessions"
- ww1_ottoman.92.t:0 "Purchase Pre-Dreadnoughts From [GER.GetName]"
- ww1_ottoman.92.d:0 "In late 1909, the German military attache to us began a conversation with the our Navy about the possibility of selling German warships to us to counter Greek naval expansion. After lengthy negotiations, including our attempts to buy one or more of the new battlecruisers Von der Tann, Moltke, and Goeben, the Germans offered to sell the four ships of the Brandenburg class at a cost of 10 million marks.\n\nWe chose to buy Kurfürst Friedrich Wilhelm and Weissenburg, since they were the more advanced ships of the class."
- ww1_ottoman.92.a:0 "Oh, about that."
- ww1_ottoman.92.b:0 "We need more time to think."
- ww1_ottoman.93.t:0 "[TUR.GetName] Want to Purchase Pre-Dreadnoughts"
- ww1_ottoman.93.d:0 "In late 1909, we attache to us began a conversation with the Ottoman Navy about the possibility of selling our warships to Ottoman to counter Greek naval expansion. After lengthy negotiations, including Ottomans attempts to buy one or more of the new battlecruisers Von der Tann, Moltke, and Goeben, we offered to sell the four ships of the Brandenburg class at a cost of 10 million marks.\n\n[TUR.GetAdjective] chose to buy Kurfürst Friedrich Wilhelm and Weissenburg, since they were the more advanced ships of the class."
- ww1_ottoman.93.a:0 "This is how we get a good ally."
- ww1_ottoman.93.b:0 "No, we won't sell them."
- tur_british_ships_1914:0 "We'll receive two §Ybattleships§!, namely §YReşadiye§! and §YSultan Osman-ı Evvel§!"
- eng_british_ships_1914:0 "We'll receive two §Ybattleships§!, namely §YHMS Erin§! and §YHMS Agincourt§!"
- germany_transfers_ships:0 "§Y[GER.GetName]§! will transfer two of its §Ybattleships§!, namely §YSMS Kurfürst Friedrich Wilhelm§! and §YSMS Weissenburg§!"
- germany_transfers_ships2:0 "We'll transfer two of our §Ybattleships§!, namely §YSMS Kurfürst Friedrich Wilhelm§! and §YSMS Weissenburg§!"
- ww1_ottoman.94.t:0 "[GER.GetAdjective] Ships Arrived"
- ww1_ottoman.94.d:0 "Two German pre-dreadnought battleships, SMS Kurfürst Friedrich Wilhelm and SMS Weissenburg has arrived our ports. They will be renamed as Barbaros Hayreddin and Turgut Reis, and serve our navy."
- ww1_ottoman.94.a:0 "Now tell me Greeks, how about these ships?"
- ww1_ottoman.95.t:0 "Germans Don't Want to Sell Ships"
- ww1_ottoman.95.d:0 "We paid fairly. But the Germans decided not to hand over two battleships to us!"
- ww1_ottoman.95.a:0 "Give my money back!"
- ww1_ottoman.146.t:0 "Reşadiye-class Battleships are Ready"
- ww1_ottoman.146.d:0 "To combat Greek influence in the Aegean, our government has ordered two dreadnought battleships from Britain. Previously ordered by Brazil yet not continued, these battleships will help with solidfying our strength in Aegean waters."
- ww1_ottoman.146.a:0 "Lets make the last purchase and get our ships."
- ww1_ottoman.146.b:0 "I suppose we'll pass."
- ww1_ottoman.147.t:0 "[TUR.GetAdjective] Battleship Order"
- ww1_ottoman.147.d:0 "The two Reşadiye-class battleships ordered by [TUR.GetNameDef] are ready. As they just made the last bit of purchase, the ships are ready to be handed out."
- ww1_ottoman.147.a:0 "Business is business."
- ww1_ottoman.147.b:0 "They're alligned with Germans. They cannot be trusted."
- ww1_ottoman.148.t:0 "The Ships Have Arrived!"
- ww1_ottoman.148.d:0 "Two dreadnought battleships has arrived our ports that we have ordered before. They will be named as Reşadiye and Sultan Osman-ı Evvel, and serve our navy."
- ww1_ottoman.148.a:0 "Great."
- ww1_ottoman.149.t:0 "The British Seize our Battleships!"
- ww1_ottoman.149.d:0 "We ordered two battleships to Britain, and the ships were about to be completed. But the British took away our battleships to use their own!"
- ww1_ottoman.149.a:0 "What the hell is going on?!"
- ww1_ottoman.150.t:0 "[TUR.GetAdjective] Battleship Deal Falls Through"
- ww1_ottoman.150.d:0 "As the construction of the Reşadiye-class battleships are completed, [TUR.GetName] refused to make the last payment and has called the deal is off."
- ww1_ottoman.150.a:0 "I suppose we can put them into good use."
  ww1_ottoman.153.t:0 "Revolts in Albania"
  ww1_ottoman.153.d:0 "Despite the strong repression that we applied in Albania in 1909 following previous insurrections, we are once again confronted with Albanian independence. Isa Boletini and other resistance fighters have taken up arms and are forcing us to do the same."
  ww1_ottoman.153.a:0 "Send the Army!"
