--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -839,6 +839,18 @@ FRA_expansion_of_brest_port:0 "Expansion of Brest Port"
 FRA_expansion_of_brest_port_desc:0 "Deputy §YGuist'Hau§! proposed the construction of a high deep quay at the commercial port of Brest. The project is estimated at 3 million francs."
 FRA_expansion_of_brest_port_done:0 "Expansion of Brest Port Voted"
 
+FRA_payments_to_SGTM_brazil_plata:0 "Payments to SGTM Brazil-Plata"
+FRA_payments_to_SGTM_brazil_plata_desc:0 "The "Société Générale de Transports Maritimes" company carries out numerous freight transports, particularly in South America. The company, which largely benefits from state aid, needs additional funds to ensure its relay. The state will therefore allocate a credit of 556,615 francs in subsidies to the maritime service of Brazil and La Plata."
+FRA_payments_to_SGTM_brazil_plata_done:0 "Payments to SGTM Brazil-Plata Done"
+
+FRA_saint_erasme_battery_decomission:0 "Saint-Erasme Battery Decomission"
+FRA_saint_erasme_battery_decomission_desc:0 "The battery of Saint-Erasme of Bastia, in Corsica, becomes obsolete and the deputy §YEugène Etienne§! therefore proposed to dismantle it. This fortress, built in 1853, will be permanently removed from the list of places of war."
+FRA_saint_erasme_battery_decomission_done:0 "Saint-Erasme Battery Decomission Vote Passed"
+
+FRA_exceptional_credit_to_minister_of_war:0 "Exceptional Credit to Minister of War"
+FRA_exceptional_credit_to_minister_of_war_desc:0 "A credit of 5,986,675 francs was requested by the Ministry of War in order to reduce the working hours of war industrial establishments. A large part of the allocated funds will be dedicated to paying additional salaries linked to the opening of new positions.\n\nPart of these funds will also be used to finance maintenance and certain war industries, including artillery production, marksmanship training and aeronics."
+FRA_exceptional_credit_to_minister_of_war_done:0 "Exceptional Credit to Minister of War Vote Passed"
+
 FRA_investments_in_indochina:0 "Investements in [IND.getFlag]Indochina"
 FRA_exceptional_loan_to_indochina_ended:0 "Investments are done"
 
