--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -19,6 +19,7 @@
  VICTORY_POINTS_11160:0"Kristianstad"
  VICTORY_POINTS_9209:0 "Örebro"
  VICTORY_POINTS_9523:0 "Versailles"
+ VICTORY_POINTS_9851:0 "Bastia"
  VICTORY_POINTS_9561:0 "Compiègne"
  VICTORY_POINTS_849:0 "Gelibolu"
  VICTORY_POINTS_1177:0 "Jeju"
