fixed integral life threatening bugs

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -870,7 +870,7 @@
  STATE_868:0 "Eastern Carpathians"
  STATE_869:0 "Saarland"
  STATE_870:0 "Shkodër"
- STATE_871:0 "Vlorë"
+ STATE_871:0 "Avlonya"
  STATE_872:0 "Chiaotung" #膠東
  STATE_873:0 "Ruhr"
  STATE_874:0 "Basra"
