--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4165,6 +4165,9 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.87.t:0 "[TUR.GetAdjective] Battleship Deal Falls Through"
  ottoman.87.d:0 "As the construction of the Reşadiye-class battleships are completed, [TUR.GetName] refused to make the last payment and has called the deal is off."
  ottoman.87.a:0 "I suppose we can put them into good use."
+ ottoman.88.t:0 "Albanian Resistance Spreads"
+ ottoman.88.d:0 "As the Albanian lands under our control are being occupied by other Balkan powers, namely [SER.GetName], [MNT.GetName], [GRE.GetName] and their allies, remaining Albanian intellectuals and rebels flock into the remaining Albanian territories under our empire. As they see our empire no longer able to protect its Albanian population, they prepare for several more revolts and the eventual independence in order to break free from our rule and form their own state to defend."
+ ottoman.88.a:0 "As we fight the Balkan powers, enemies within our nation conspire against us."
 
  ottoman.72.t:0 "Russia Agrees"
  ottoman.72.d:0 "Seems like the Russians also agree with our statement, they agreed to hand us Kars, Artvin and Batumi."
