--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -158,4 +158,5 @@
  VICTORY_POINTS_9874:0 "Priştine"
  VICTORY_POINTS_9914:0 "Tiran"
  VICTORY_POINTS_914:0 "Ergiri"
+ VICTORY_POINTS_11767:0 "Avlonya"
 
