--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2064,9 +2064,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_add_albanian_minority_2:0 "Add £ww1_flag_ALB §YAlbanian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+20%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_albanian_minority_3:0 "Add £ww1_flag_ALB §YAlbanian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+30%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_albanian_minority_4:0 "Add £ww1_flag_ALB §YAlbanian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+40%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
- TUR_greek_minority_level_down_gumulcine:0 "Modify [TUR_get_state_minority] by\nLocal Factories: §G+3%§!\nIntel to Enemies: §G-5%§!\nRecruitable Population: §G+2.50%§!\nLocal Construction Speed: §R-1%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
- TUR_greek_minority_level_down1:0 "Modify [TUR_get_state_minority] by\n"
- TUR_greek_minority_level_down2:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n"
+ TUR_minority_level_down:0 "Modify [TUR_get_state_minority] by\n"
+ TUR_minority_stability_war_support_down:0 "[TUR_minority_stability_war_support_down]"
+ TUR_minority_stability_war_support_down_yes:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n"
 
  TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
  TUR_minority_local_factories_normal:0 "£civ_factory  Local Factories: §G+5%§!\n"
@@ -2099,13 +2099,31 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_local_construction_speed_down:0 "[TUR_minority_local_construction_speed_down]"
  TUR_minority_local_construction_speed_normal:0 "£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
  TUR_minority_local_construction_speed_1:0 "£construction_speed_texticon  Local Construction Speed: §R-1%§!\n"
+
+ TUR_minority_required_garrison_factor_down:0 "[TUR_minority_required_garrison_factor_down]"
+ TUR_minority_required_garrison_factor_normal:0 "£garrison_texticon  Required Garrisons: §G+5%§!\n"
+ TUR_minority_required_garrison_factor_4:0 "£garrison_texticon  Required Garrisons: §G+4%§!\n"
+ TUR_minority_required_garrison_factor_3:0 "£garrison_texticon  Required Garrisons: §G+3%§!\n"
+ TUR_minority_required_garrison_factor_2:0 "£garrison_texticon  Required Garrisons: §G+2%§!\n"
+ TUR_minority_required_garrison_factor_1:0 "£garrison_texticon  Required Garrisons: §G+1%§!\n"
+ TUR_minority_resistance_decay_down:0 "[TUR_minority_resistance_decay_down]"
+ TUR_minority_resistance_decay_normal:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-10%§!\n"
+ TUR_minority_resistance_decay_9:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-9%§!\n"
+ TUR_minority_resistance_decay_8:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-8%§!\n"
+ TUR_minority_resistance_decay_7:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-7%§!\n"
+ TUR_minority_resistance_decay_6:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-6%§!\n"
+ TUR_minority_resistance_decay_5:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-5%§!\n"
+ TUR_minority_resistance_decay_4:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-4%§!\n"
+ TUR_minority_resistance_decay_3:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-3%§!\n"
+ TUR_minority_resistance_decay_2:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-2%§!\n"
+ TUR_minority_resistance_decay_1:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-1%§!\n"
+
  TUR_minority_stability_down:0 "[TUR_minority_stability_down]"
  TUR_minority_stability_normal:0 "£stability_texticon  Stability: §G+0.20%§!\n"
  TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
- TUR_minority_war_support_down:0 "£war_support_modifiericons_texticonWar Support: §G+0.10%§!\n"
+ TUR_minority_war_support_down:0 "£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
 
- TUR_south_slavic_minority_level_down_gumulcine:0 "Modify [TUR_get_state_minority] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+5%§!\n£garrison_texticon  Required Garrisons: §G+2%§!\n£manpower_texticon  Recruitable Population: §G+2.50%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
- TUR_south_slavic_minority_level_down_1:0 "Modify [TUR_get_state_minority] by\n£manpower_texticon  Recruitable Population: §R-5.00%§!\n£garrison_texticon  Required Garrisons: §R-5%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-10%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
+ TUR_south_slavic_minority_level_down_gumulcine:0 "Modify [TUR_get_state_minority] by\n[TUR_minority_resistance_decay_down][TUR_minority_required_garrison_factor_down]£manpower_texticon  Recruitable Population: §G+2.50%§!\n[TUR_minority_stability_war_support_down][TUR_minority_stability_down]"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
