--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -930,6 +930,7 @@ USA_pursue_world_peace:0 "Dreams of World Peace"
  USA_welcome_new_states_desc:0 "With all preparations complete, we can finally welcome New Mexico and Arizona as the 47th and 48th states."
  USA_new_mexican_statehood:0 "New Mexican Statehood"
  USA_new_mexican_statehood_desc:0 "With all preparations complete, we can finally welcome New Mexico as the 47th state."
+USA_nightmares_of_world_war:0 "Nightmares of a World War"
  USA_arizonan_statehood:0 "Arizonan Statehood"
  USA_arizonan_statehood_desc:0 "With all preparations complete, we can finally welcome Arizona as the 48th state."
  USA_canadian_reciprocal_trade_agreement:0 "Canadian Reciprocal Trade Agreement"
