--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -869,7 +869,7 @@
  STATE_867:0 "South Bukovina"
  STATE_868:0 "Eastern Carpathians"
  STATE_869:0 "Saarland"
- STATE_870:0 "Shkodër"
+ STATE_870:0 "İşkodra"
  STATE_871:0 "Avlonya"
  STATE_872:0 "Chiaotung" #膠東
  STATE_873:0 "Ruhr"
