--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -74,7 +74,7 @@
  VICTORY_POINTS_9794:0 "Terni"
  VICTORY_POINTS_9916:0 "Arta"
  VICTORY_POINTS_9837:0 "Florina"
- VICTORY_POINTS_13274:0 "Shkodër"
+ VICTORY_POINTS_13274:0 "İşkodra"
  VICTORY_POINTS_9906:0 "Vranje"
  VICTORY_POINTS_3939:0 "YeniPazar"
  VICTORY_POINTS_6790:0 "Parma"
