Korea and mantetsu victory points

--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -157,3 +157,4 @@
  VICTORY_POINTS_587:0 "Düsseldorf"
  VICTORY_POINTS_11435:0 "Trier"
  VICTORY_POINTS_10412:0 "Lynchburg"
+ VICTORY_POINTS_11771:0 "Fengtian"
