Little more adjustments

--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -23,8 +23,7 @@
  VICTORY_POINTS_9561:0 "Compiègne"
  VICTORY_POINTS_849:0 "Gelibolu"
  VICTORY_POINTS_1177:0 "Jeju"
- VICTORY_POINTS_10110:0 "Gwangju"
- VICTORY_POINTS_848:0 "Hamheung"
+ VICTORY_POINTS_848:0 "Wonsan"
  VICTORY_POINTS_11808:0 "Fushun"
  VICTORY_POINTS_3934:0 "Fuxin"
  VICTORY_POINTS_6837:0 "Jinzhou"
