--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2100,23 +2100,84 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_local_construction_speed_normal:0 "£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
  TUR_minority_local_construction_speed_1:0 "£construction_speed_texticon  Local Construction Speed: §R-1%§!\n"
 
+ TUR_minority_local_supplies_for_controller_down:0 "[TUR_minority_local_supplies_for_controller_down]"
+ TUR_minority_local_supplies_for_controller_normal:0 "£supply_texticon  Local Supplies: §G+5%§!\n"
+ TUR_minority_local_supplies_for_controller_4:0 "£supply_texticon  Local Supplies: §G+4%§!\n"
+ TUR_minority_local_supplies_for_controller_3:0 "£supply_texticon  Local Supplies: §G+3%§!\n"
+ TUR_minority_local_supplies_for_controller_2:0 "£supply_texticon  Local Supplies: §G+2%§!\n"
+ TUR_minority_local_supplies_for_controller_1:0 "£supply_texticon  Local Supplies: §G+1%§!\n"
+
  TUR_minority_required_garrison_factor_down:0 "[TUR_minority_required_garrison_factor_down]"
- TUR_minority_required_garrison_factor_normal:0 "£garrison_texticon  Required Garrisons: §G+5%§!\n"
- TUR_minority_required_garrison_factor_4:0 "£garrison_texticon  Required Garrisons: §G+4%§!\n"
- TUR_minority_required_garrison_factor_3:0 "£garrison_texticon  Required Garrisons: §G+3%§!\n"
- TUR_minority_required_garrison_factor_2:0 "£garrison_texticon  Required Garrisons: §G+2%§!\n"
- TUR_minority_required_garrison_factor_1:0 "£garrison_texticon  Required Garrisons: §G+1%§!\n"
+ TUR_minority_required_garrison_factor_normal:0 "£garrison_texticon  Required Garrisons: §G-5%§!\n"
+ TUR_minority_required_garrison_factor_4:0 "£garrison_texticon  Required Garrisons: §G-4%§!\n"
+ TUR_minority_required_garrison_factor_3:0 "£garrison_texticon  Required Garrisons: §G-3%§!\n"
+ TUR_minority_required_garrison_factor_2:0 "£garrison_texticon  Required Garrisons: §G-2%§!\n"
+ TUR_minority_required_garrison_factor_1:0 "£garrison_texticon  Required Garrisons: §G-1%§!\n"
  TUR_minority_resistance_decay_down:0 "[TUR_minority_resistance_decay_down]"
- TUR_minority_resistance_decay_normal:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-10%§!\n"
- TUR_minority_resistance_decay_9:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-9%§!\n"
- TUR_minority_resistance_decay_8:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-8%§!\n"
- TUR_minority_resistance_decay_7:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-7%§!\n"
- TUR_minority_resistance_decay_6:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-6%§!\n"
- TUR_minority_resistance_decay_5:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-5%§!\n"
- TUR_minority_resistance_decay_4:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-4%§!\n"
- TUR_minority_resistance_decay_3:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-3%§!\n"
- TUR_minority_resistance_decay_2:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-2%§!\n"
- TUR_minority_resistance_decay_1:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G-1%§!\n"
+ TUR_minority_resistance_decay_normal:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n"
+ TUR_minority_resistance_decay_9:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+9%§!\n"
+ TUR_minority_resistance_decay_8:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+8%§!\n"
+ TUR_minority_resistance_decay_7:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+7%§!\n"
+ TUR_minority_resistance_decay_6:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+6%§!\n"
+ TUR_minority_resistance_decay_5:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+5%§!\n"
+ TUR_minority_resistance_decay_4:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+4%§!\n"
+ TUR_minority_resistance_decay_3:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+3%§!\n"
+ TUR_minority_resistance_decay_2:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+2%§!\n"
+ TUR_minority_resistance_decay_1:0 "£political_violence_loss_texticon  Resistance Decay Speed: §G+1%§!\n"
+
+ TUR_minority_resistance_growth_down:0 "[TUR_minority_resistance_growth_down]"
+ TUR_minority_resistance_growth_normal:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+10%§!\n"
+ TUR_minority_resistance_growth_9:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+9%§!\n"
+ TUR_minority_resistance_growth_8:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+8%§!\n"
+ TUR_minority_resistance_growth_7:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+7%§!\n"
+ TUR_minority_resistance_growth_6:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+6%§!\n"
+ TUR_minority_resistance_growth_5:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+5%§!\n"
+ TUR_minority_resistance_growth_4:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+4%§!\n"
+ TUR_minority_resistance_growth_3:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+3%§!\n"
+ TUR_minority_resistance_growth_2:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+2%§!\n"
+ TUR_minority_resistance_growth_1:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G+1%§!\n"
+
+ TUR_minority_army_defence_factor_down:0 "[TUR_minority_army_defence_factor_down]"
+ TUR_minority_army_defence_factor_normal:0 "£defence_texticon  Division Defense: §G+5.0%§!\n"
+ TUR_minority_army_defence_factor_4:0 "£defence_texticon  Division Defense: §G+4.0%§!\n"
+ TUR_minority_army_defence_factor_3:0 "£defence_texticon  Division Defense: §G+3.0%§!\n"
+ TUR_minority_army_defence_factor_2:0 "£defence_texticon  Division Defense: §G+2.0%§!\n"
+ TUR_minority_army_defence_factor_1:0 "£defence_texticon  Division Defense: §G+1.0%§!\n"
+ TUR_minority_enemy_local_supplies_down:0 "[TUR_minority_enemy_local_supplies_down]"
+ TUR_minority_enemy_local_supplies_normal:0 "£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
+ TUR_minority_enemy_local_supplies_4:0 "£enemy_supply_texticon  Enemy Local Supplies: §G-4%§!\n"
+ TUR_minority_enemy_local_supplies_3:0 "£enemy_supply_texticon  Enemy Local Supplies: §G-3%§!\n"
+ TUR_minority_enemy_local_supplies_2:0 "£enemy_supply_texticon  Enemy Local Supplies: §G-2%§!\n"
+ TUR_minority_enemy_local_supplies_1:0 "£enemy_supply_texticon  Enemy Local Supplies: §G-1%§!\n"
+
+ TUR_minority_local_resources_factor_down:0 "[TUR_minority_local_resources_factor_down]"
+ TUR_minority_local_resources_factor_normal:0 "£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n"
+ TUR_minority_local_resources_factor_4:0 "£resources_texticon  Resource Gain Efficiency: §G+4.00%§!\n"
+ TUR_minority_local_resources_factor_3:0 "£resources_texticon  Resource Gain Efficiency: §G+3.00%§!\n"
+ TUR_minority_local_resources_factor_2:0 "£resources_texticon  Resource Gain Efficiency: §G+2.00%§!\n"
+ TUR_minority_local_resources_factor_1:0 "£resources_texticon  Resource Gain Efficiency: §G+1.00%§!\n"
+
+ TUR_minority_local_building_slots_factor_down:0 "[TUR_minority_local_building_slots_factor_down]"
+ TUR_minority_local_building_slots_factor_normal:0 "£civ_factory  Max Factories in State: §G+10%§!\n"
+ TUR_minority_local_building_slots_factor_9:0 "£civ_factory  Max Factories in State: §G+9%§!\n"
+ TUR_minority_local_building_slots_factor_8:0 "£civ_factory  Max Factories in State: §G+8%§!\n"
+ TUR_minority_local_building_slots_factor_7:0 "£civ_factory  Max Factories in State: §G+7%§!\n"
+ TUR_minority_local_building_slots_factor_6:0 "£civ_factory  Max Factories in State: §G+6%§!\n"
+ TUR_minority_local_building_slots_factor_5:0 "£civ_factory  Max Factories in State: §G+5%§!\n"
+ TUR_minority_local_building_slots_factor_4:0 "£civ_factory  Max Factories in State: §G+4%§!\n"
+ TUR_minority_local_building_slots_factor_3:0 "£civ_factory  Max Factories in State: §G+3%§!\n"
+ TUR_minority_local_building_slots_factor_2:0 "£civ_factory  Max Factories in State: §G+2%§!\n"
+ TUR_minority_local_building_slots_factor_1:0 "£civ_factory  Max Factories in State: §G+1%§!\n"
+
+ TUR_minority_local_factory_sabotage_down:0 "[TUR_minority_local_factory_sabotage_down]"
+ TUR_minority_local_factory_sabotage_normal:0 "£garrison_texticon  Required Garrisons: §G-5%§!\n"
+ TUR_minority_local_factory_sabotage_4:0 "£garrison_texticon  Required Garrisons: §G-4%§!\n"
+ TUR_minority_local_factory_sabotage_3:0 "£garrison_texticon  Required Garrisons: §G-3%§!\n"
+ TUR_minority_local_factory_sabotage_2:0 "£garrison_texticon  Required Garrisons: §G-2%§!\n"
+ TUR_minority_local_factory_sabotage_1:0 "£garrison_texticon  Required Garrisons: §G-1%§!\n"
+ TUR_minority_compliance_growth_down:0 "[TUR_minority_compliance_growth_down]"
+ TUR_minority_compliance_growth_normal:0 "£compliance_gain_texticon  Compliance Growth Speed: §G+2%§!\n"
+ TUR_minority_compliance_growth_2:0 "£compliance_gain_texticon  Compliance Growth Speed: §G+1%§!\n"
 
  TUR_minority_stability_down:0 "[TUR_minority_stability_down]"
  TUR_minority_stability_normal:0 "£stability_texticon  Stability: §G+0.20%§!\n"
