--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4594,30 +4594,29 @@
  TUR_secure_power_in_arabia_desc:0 "Our empire has entrenched itself in Arabia over the centuries. Yet there are still revolts we havent been able to deal with yet. We have to secure our power in the region before proceeding with further policies."
  TUR_ratify_the_treaty_of_daan:0 "Ratify the Treaty of Daan"
  TUR_ratify_the_treaty_of_daan_desc:0 "Our empire has always been dealign with Revotls from Yemen. Due to its distance from the heart of our empire and geographical limitations, we never managed to end insurgencies in Yemen. To finally end the conflict between Yemen and the central government, we can arrange an agreement with Imam Yahya to give him Autonomy over the region, and task to collect taxes on behalf of the Sublime Porte."
- TUR_ratify_the_treaty_of_daan_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nDivision Attrition: §G-70.0%§!\n\n"
+ TUR_ratify_the_treaty_of_daan_tt:0 "Modify [TUR_get_state_minority] by\nDivision Attrition: §G-70.0%§!\n\n"
  TUR_defense_of_trablusgarp:0 "Defense of Trablusgarp"
  TUR_defense_of_trablusgarp_desc:0 "Our last remaining territories in Africa, Trablusgarp, are being targeted by European colonial powers. While the region is sceptic to our rule, they're more than happy to side with us against the imperialists. By rallying the local population, we can increase our chances to defend Trablusgarp."
- TUR_defense_of_trablusgarp_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Supplies: §G+10%§!\nRecruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nWar Support: §G+0.20%§!\n\n"
+ TUR_defense_of_trablusgarp_tt:0 "Modify [TUR_get_state_minority] by\nLocal Supplies: §G+10%§!\nRecruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nWar Support: §G+0.20%§!\n\n"
  TUR_law_on_churches:0 "Law on Churches"
  TUR_law_on_churches_desc:0 "Under the Millet system, all rumelian Orthodox Christians were dependent on the Greek Patriarchate for religious matters. Yet this law is widely unpopular among our Bulgarian population. By separating Bulgarian churches and schools from the Greek religious jurisdiction, we can settle ethnic tensions and struggles in the Macedonian region of our empire."
- TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-10.0%§!\nCompliance Growth Speed: §G+10%§!\n\n"
- TUR_law_on_churches_tt2:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nCompliance Growth Speed: §G+10%§!\n\n"
- TUR_law_on_churches_tt3:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\nCompliance Growth Speed: §G+10%§!\n\n"
+ TUR_law_on_churches_tt:0 "Modify [TUR_get_state_minority] by\nDivision Attrition: §G-10.0%§!\nCompliance Growth Speed: §G+10%§!\n\n"
+ TUR_law_on_churches_tt2:0 "Modify [TUR_get_state_minority] by\nCompliance Growth Speed: §G+10%§!\n\n"
+ TUR_law_on_churches_tt3:0 "Modify [TUR_get_state_minority] by\nCompliance Growth Speed: §G+10%§!\n\n"
  TUR_ottoman_law_on_church:0 "Ottoman Law on Church"
  TUR_ottoman_law_on_church_2:0 "Ottoman Law on Church"
  TUR_law_on_churches_tt4:0 "Unlocks §YEstablish Order in Macedonia§! Decisions\nUnlocks §YIntegrate Macedonia§! Decisions\n"
  TUR_increase_taxes_on_albanians:0 "Increase Taxes on Albanians"
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
- TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\nResistance Target: §R+20%§!\nRecruitable Population: §G+5.00%§!\n\n"
+ TUR_increase_taxes_on_albanians_tt:0 "Modify [TUR_get_state_minority] by\nResistance Target: §R+20%§!\nRecruitable Population: §G+5.00%§!\n\n"
  TUR_increase_taxes_on_albanians_tt2:0 "Unlocks §YTax Collection in Albania§! Decisions"
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
- TUR_approve_grece_memorandum_tt:0 "Modify £ww1_flag_ALB  §YAlbanian Minority§! by\nResistance Target: §G-30%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.50%§!\nWar Support: §G+0.30%§!\n\n"
- TUR_approve_grece_memorandum_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\nResistance Target: §G-10%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.50%§!\nWar Support: §G+0.30%§!\n\n"
- TUR_approve_grece_memorandum_tt3:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\nResistance Target: §G-10%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.50%§!\nWar Support: §G+0.30%§!\n\n"
+ TUR_approve_grece_memorandum_tt:0 "Modify [TUR_get_state_minority] by\nResistance Target: §G-30%§!\n\n"
+ TUR_approve_grece_memorandum_tt2:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.50%§!\nWar Support: §G+0.30%§!\n\n"
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
- TUR_centralize_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\nResistance Target: §R+30%§!\nResistance Growth Speed: §G-10%§!\nRecruitable Population: §G+5.00%§!\n\n"
+ TUR_centralize_albania_tt:0 "Modify [TUR_get_state_minority] by\nResistance Target: §R+30%§!\nResistance Growth Speed: §G-10%§!\nRecruitable Population: §G+5.00%§!\n\n"
  TUR_centralize_albania_tt2:0 "Unlocks §YIncreased Albanian Conscriptions§! Decisions\nUnlocks §YImprove Albanian Garrisons§! Decisions\n"
  TUR_albanian_vilayet:0 "Albanian Vilayet"
  TUR_albanian_vilayet_desc:0 "Recent rebellions in Albania has proven that we need to introduce serious reforms in the region. As some within our government proposes, we should give autonomy to Albanians. With the creation of an Albanian vilayet, where Albanian language, cultures and customs will be permitted, we can bring an end to these long lasting revolts that has been plaguing the region."
@@ -4633,7 +4632,7 @@
  TUR_ottoman_public_debt_administration_desc:0 "As our empire's debts were accimulated due to foreign reliance, Europeans established Ottoman Public Debt Administration in 1881 with the intention of collecting Ottoman taxes with an autonomous body. As this body hinders our national sovereignty, we should continue paying our debts to the administration as soon as possible."
  TUR_construct_hindiya_barrage:0 "Construct Hindiya Barrage"
  TUR_construct_hindiya_barrage_desc:0 "The Euphrates river gives us opportunities to construct renewable energy stations to use it to our advantage. Hindiya Barrage, a barrage that was proposed to be constructed in Euphrates, will help us with producing electricity."
- TUR_construct_hindiya_barrage_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nLocal Construction Speed: §G+5%§!\n\n"
+ TUR_construct_hindiya_barrage_tt:0 "Modify [TUR_get_state_minority] by\nLocal Construction Speed: §G+5%§!\n\n"
  TUR_form_turkish_petroleum_company:0 "Form Turkish Petroleum Company"
  TUR_form_turkish_petroleum_company_desc:0 "We can't let the foreigners drill our soil as they please. We must compete against them for the sovereignty over our own oil fields. By forming Turkish Petroleum Company, we can combat foreign domain our our oil fields."
  TUR_umur_u_nafia_muduriyet_i_umumiyesi:0 "Umur-u Nafia Müdüriyet-i Umumiyesi"
@@ -4852,6 +4851,8 @@
  TUR_one_language_one_religion_one_nation2:0 "Modify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n\n"
  TUR_exterminating_our_population:0 "Exterminating our Population"
  TUR_subdue_bulgarians_tt:0 "Modify [TUR_get_state_minority] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
+ TUR_subdue_bulgarians_tt1:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
+ TUR_subdue_bulgarians_tt2:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n\n"
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians:0 "Remove £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_local_factories][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_local_intel_to_enemies][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_resistance_decay][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_required_garrison_factor][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_recruitable_population_factor][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_state_production_speed_buildings_factor]"
  TUR_remove_greek_effect_TUR_subdue_bulgarians:0 "Modify [TUR_get_state_minority] by\n[TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_resistance_decay][TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_required_garrison_factor]£manpower_texticon  Recruitable Population: §G+2.50%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_recruitable_population_factor_yes:0 "£manpower_texticon  Recruitable Population: [?TUR_ottoman_recruitable_population_factor_TUR_subdue_bulgarians|=2%+]\n"
@@ -4862,6 +4863,9 @@
  TUR_remove_south_slavic_effect_TUR_subdue_bulgarians_state_production_speed_buildings_factor_yes:0 "£construction_speed_texticon  Local Construction Speed: [?TUR_ottoman_state_production_speed_buildings_factor_TUR_subdue_bulgarians|=0%+]\n"
  TUR_destruction_of_the_bulgarians_tt:0 "Unlocks decisions to §YDestroy Bulgarians§!.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
  TUR_displace_christians_from_economy_tt:0 "Modify [TUR_get_state_minority] by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
+ TUR_displace_christians_from_economy_tt1:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
+ TUR_displace_christians_from_economy_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
+ TUR_displace_christians_from_economy_tt3:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
  TUR_remove_greek_effect_TUR_displace_christians_from_economy:0 "Remove £ww1_game_rule_flag_GRE  §YGreek Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_local_factories][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_local_intel_to_enemies][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_resistance_decay][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_required_garrison_factor][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_recruitable_population_factor][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_state_production_speed_buildings_factor]Add £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_resistance_decay][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_required_garrison_factor][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_recruitable_population_factor2]\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
  TUR_remove_greek_effect_TUR_displace_christians_from_economy2:0 "Remove £ww1_game_rule_flag_GRE  §YGreek Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_local_factories][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_local_intel_to_enemies][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_resistance_decay][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_required_garrison_factor][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_recruitable_population_factor][TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_state_production_speed_buildings_factor]"
  TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_recruitable_population_factor_yes:0 "£manpower_texticon  Recruitable Population: [?TUR_ottoman_recruitable_population_factor_TUR_displace_christians_from_economy|=2%+]\n"
@@ -4872,7 +4876,15 @@
  TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_local_intel_to_enemies_yes:0 "£operatives_build_intel_network_texticon  Intel to Enemies: [?TUR_ottoman_local_intel_to_enemies_TUR_displace_christians_from_economy|=0%-]\n"
  TUR_remove_south_slavic_effect_TUR_displace_christians_from_economy_state_production_speed_buildings_factor_yes:0 "£construction_speed_texticon  Local Construction Speed: [?TUR_ottoman_state_production_speed_buildings_factor_TUR_displace_christians_from_economy|=0%+]\n"
  TUR_greek_deportations_tt:0 "Unlocks decisions to §YDeport Greeks§!.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_GRE  §YGreek Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
- TUR_confiscate_christian_properties_tt:0 "§YMinority focuses§! and §Ydecisions§! will be reduced in §Ytime§! and §Ycost§!, and get additional §Ystability§! upon completion.§!."
+ TUR_sedentarization_of_kurdish_tribes_tt:0 "Modify [TUR_get_state_minority] by\nResource Gain Efficiency: §G+5.00%§!\nRecruitable Population: §G+10.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
+ TUR_sedentarization_of_kurdish_tribes_tt1:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nResource Gain Efficiency: §G+5.00%§!\nRecruitable Population: §G+10.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
+ TUR_sedentarization_of_kurdish_tribes_tt2:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nResource Gain Efficiency: §G+5.00%§!\nRecruitable Population: §G+10.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
+ TUR_sedentarization_of_kurdish_tribes_tt3:0 "Modify £ww1_flag_ASY  §YAssyrian Minority§! by\nResource Gain Efficiency: §G+5.00%§!\nRecruitable Population: §G+10.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
+ TUR_confiscate_christian_properties_tt:0 "§YMinority focuses§! and §Ydecisions§! will be reduced in §Ytime§! and §Ycost§!, and get additional §Ystability§! upon completion."
+ TUR_line_up_armenian_traitors_tt:0 "Modify [TUR_get_state_minority] by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
+ TUR_line_up_armenian_traitors_tt1:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
+ TUR_line_up_armenian_traitors_tt2:0 "Modify £ww1_flag_KUR  §YKurdish Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
+ TUR_line_up_armenian_traitors_tt3:0 "Modify £ww1_flag_GEO  §YGeorgian Minority§! by\nDivision Defense: §G+5.0%§!\nEnemy Local Supplies: §G-5%§!\n\n"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
@@ -5640,7 +5652,6 @@
  TUR_massacre_in_serbia_tt:0 "§YSuppression on South Slavs§! decision can now also be taken for §Y[761.GetName]§!, §Y[760.GetName]§!, §Y[105.GetName]§!, §Y[104.GetName]§!, §Y[107.GetName]§!, §Y[809.GetName]§!, §Y[876.GetName]§! and §Y[821.GetName]§!."
  TUR_an_alliance_with_the_kurds_tt:0 "Modify £ww1_flag_KUR §YKurdish Minority§! as: Resistance Target: §G-15%§!"
  TUR_an_alliance_with_the_kurds_tt2:0 "\nIf completed focus §YReorganize the Hamidiye§!:\nModify template cap of §YHamidiye Alayı§! by §G+7§!"
- TUR_sedentarization_of_kurdish_tribes_tt:0 "Modify £ww1_flag_KUR §YKurdish Minority§! by\nResource Gain Efficiency: §G+15.00%§!\nRecruitable Population: §G+15.00%§!"
  TUR_an_alliance_with_the_kurds_tt4:0 "The negative stability and war support impact on §YSeperatist Sentiments§! caused by £ww1_flag_KUR §YKurdish Minority§! modifier will be neutralized."
  TUR_expanding_the_kurdish_policy_tt:0 "If completed focus §YForceful Assimilation of Kurds§!:"
  TUR_expanding_the_kurdish_policy_tt2:0 "§YSuppression on Kurds§! decision can now also be taken for §Y[879.GetName]§!, §Y[883.GetName]§!, §Y[880.GetName]§!, §Y[419.GetName]§! and §Y[421.GetName]§!."
